# trading-bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  PLAN.md  README.md  deploy.sh  design-spec.json  docker-compose.yml  go.mod  go.sum  plan-3.1.md  plan-llm-proposals.md  plan1-remaining.md  plan2-remaining.md  plan3-remaining.md  plan4-remaining.md  plan_1_regime_multitimeframe.md  plan_1_websocket_execution_parity.md  plan_2_dynamic_universe_selection.md  plan_2_probabilistic_scoring.md  plan_3_learned_signal_model.md  plan_3_volatility_position_sizing.md  plan_4_validation_rollout_and_cleanup.md  prod.Dockerfile  pyproject.toml  roadmap.md  run.sh  start.sh
backend/: app.py  config.py  database.py  models.py
backend/routes/: api.py  settings.py  websocket.py
backend/services/: ai_service.py  analyzer.py  trading.py  trending_service.py
cmd/backtest/: main.go  main_test.go
cmd/bootstrap/: main.go
cmd/ledger/: main.go  main_test.go
cmd/marketdata/: main.go  main_test.go
cmd/operations/: main.go  main_test.go
cmd/server/: main.go  stage08_routes_test.go
docs/: database-roles.md
docs/operations/: README.md  backtest-reproduction.md  backup-restore.md  broker-idempotency-recovery.md  dataset-coverage.md  feature-flags-and-cutover.md  fresh-install-and-upgrades.md  ledger-reconciliation.md  strategy-model-promotion.md
docs/reimplementation/: final-audit.md  (+12 more)
frontend/: package.json  vite.config.js
scripts/: backtest_init.sh  stage08_backup_restore.sh  stage08_backup_restore_test.go  trading_status.py
(+225 files in other folders)
