[project]
name = "trading-bot"
version = "0.1.0"
description = "Trading Bot Platform"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "Flask-SQLAlchemy>=3.1.0",
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "gevent>=23.0.0",
    "gevent-websocket>=0.10.0",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["frontend*"]
